deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: development
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s.local
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: webserver-service
                port:
                  number: 80
